--- a/src/less/ComponentStyles/Dashboard.less
+++ b/src/less/ComponentStyles/Dashboard.less
@@ -238,7 +238,7 @@
     border: 1px solid @quickhire-main;
     background-color: #fafafa;
     width: 35rem;
-    height: 30rem;
+    height: 26rem;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.6);
     border-radius: 8px;
     margin: .20%;
@@ -258,6 +258,7 @@
       align-items: center;
       justify-content: center;
       width: 100%;
+    
 
       h3 {
         font-size: 1.4rem;
@@ -389,10 +390,10 @@
     border: 1px solid @quickhire-main;
     background-color: #fafafa;
     width: 35rem;
-    height: 30rem;
+    height: 26rem;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.6);
     border-radius: 8px;
-    margin: .20%;
+    margin: 1%;
 
     @media @mobile {
       margin: 3%;
@@ -500,7 +501,6 @@
 .jobButtons {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 3%;
   padding: 2%;
   button {
     color: #ffffff;
