--- a/src/less/ComponentStyles/JobDetails.less
+++ b/src/less/ComponentStyles/JobDetails.less
@@ -5,8 +5,13 @@
     flex-direction: column;
     background: @quickhire-message;
     color: #fff;
-    @media @mobile {
+
+
+      @media @mobile {
         height: unset;
+      }
+      @media @mobile2 {
+          height: unset;
       }
       .deets-apply-button {
           display: flex;
@@ -57,12 +62,7 @@
     background: @quickhire-message;
     color: #fff;
     
-    @media @mobile {
-      height: unset;
-    }
-    @media @mobile2 {
-        height: unset;
-    }
+
     .deets-apply-button {
         display: flex;
         justify-content: flex-end;
