--- a/src/less/ComponentStyles/SavedJobs.less
+++ b/src/less/ComponentStyles/SavedJobs.less
@@ -49,6 +49,16 @@
 
 }
 
+.saved-jobs-single {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 100vh;
+    background: @quickhire-message;
+
+}
+
 .saved-jobs-main {
     display: flex;
     justify-content: center;
